--- a/lab1/Lab1/Reporter/Reporter.vcxproj
+++ b/lab1/Lab1/Reporter/Reporter.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7007eaac-c98f-4983-be48-e55a8b5d3ed2}</ProjectGuid>
-    <RootNamespace>Repoorter</RootNamespace>
+    <ProjectGuid>{acc87e25-d782-4b8d-9c90-36723bc3d7e2}</ProjectGuid>
+    <RootNamespace>Reporter</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Repoorter.cpp" />
+    <ClCompile Include="Reporter.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="employee.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
